@@ -1,6 +1,5 @@
 package com.learning.book.api.exception;
 
-
 import com.learning.book.api.dto.ErrorResponse;
 import jakarta.validation.ConstraintViolationException;
 import org.springframework.http.HttpStatus;
@@ -12,39 +11,41 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
-    @ExceptionHandler(ResourceNotFoundException.class)
-    public ResponseEntity<ErrorResponse> handleResourceNotFound(ResourceNotFoundException ex) {
-        ErrorResponse error = new ErrorResponse();
-        error.setMessage(ex.getMessage());
-        error.setStatus(HttpStatus.NOT_FOUND.value());
-        error.setDetails("Resource not found");
-        return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
-    }
+  @ExceptionHandler(ResourceNotFoundException.class)
+  public ResponseEntity<ErrorResponse> handleResourceNotFound(final ResourceNotFoundException ex) {
+    final ErrorResponse error = new ErrorResponse();
+    error.setMessage(ex.getMessage());
+    error.setStatus(HttpStatus.NOT_FOUND.value());
+    error.setDetails("Resource not found");
+    return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
+  }
 
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ErrorResponse> handleValidationExceptions(MethodArgumentNotValidException ex) {
-        ErrorResponse error = new ErrorResponse();
-        error.setMessage("Validation failed");
-        error.setDetails(ex.getBindingResult().getAllErrors().get(0).getDefaultMessage());
-        error.setStatus(HttpStatus.BAD_REQUEST.value());
-        return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
-    }
+  @ExceptionHandler(MethodArgumentNotValidException.class)
+  public ResponseEntity<ErrorResponse> handleValidationExceptions(
+      final MethodArgumentNotValidException ex) {
+    final ErrorResponse error = new ErrorResponse();
+    error.setMessage("Validation failed");
+    error.setDetails(ex.getBindingResult().getAllErrors().getFirst().getDefaultMessage());
+    error.setStatus(HttpStatus.BAD_REQUEST.value());
+    return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
+  }
 
-    @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<ErrorResponse> handleConstraintViolation(ConstraintViolationException ex) {
-        ErrorResponse error = new ErrorResponse();
-        error.setMessage("Validation failed");
-        error.setDetails(ex.getConstraintViolations().iterator().next().getMessage());
-        error.setStatus(HttpStatus.BAD_REQUEST.value());
-        return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
-    }
+  @ExceptionHandler(ConstraintViolationException.class)
+  public ResponseEntity<ErrorResponse> handleConstraintViolation(
+      final ConstraintViolationException ex) {
+    final ErrorResponse error = new ErrorResponse();
+    error.setMessage("Validation failed");
+    error.setDetails(ex.getConstraintViolations().iterator().next().getMessage());
+    error.setStatus(HttpStatus.BAD_REQUEST.value());
+    return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
+  }
 
-    @ExceptionHandler(Exception.class)
-    public ResponseEntity<ErrorResponse> handleGenericException(Exception ex) {
-        ErrorResponse error = new ErrorResponse();
-        error.setMessage("Internal server error");
-        error.setDetails(ex.getMessage());
-        error.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
-        return new ResponseEntity<>(error, HttpStatus.INTERNAL_SERVER_ERROR);
-    }
+  @ExceptionHandler(Exception.class)
+  public ResponseEntity<ErrorResponse> handleGenericException(final Exception ex) {
+    final ErrorResponse error = new ErrorResponse();
+    error.setMessage("Internal server error");
+    error.setDetails(ex.getMessage());
+    error.setStatus(HttpStatus.INTERNAL_SERVER_ERROR.value());
+    return new ResponseEntity<>(error, HttpStatus.INTERNAL_SERVER_ERROR);
+  }
 }
